# peaky

./: .env.example  .envKRS  .envTX  .gitignore  CHANGELOG.md  CITATION.cff  QUICKSTART.md  README.md  ROADMAP.md  SKILL.md  oc_class_ts_Br.csv  oc_class_ts_Ur.csv  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  ASSIGNMENT.md  ASSIGNMENT_DETAIL.md  CERTIFIED_NEUTRAL.md  CHEMISTRY.md  CLUSTERING.md  DATA_CURATION.md  DATA_IO.md  GKA.md  ISOTOPES.md  MASCOPE_TOOLS_INTEGRATION.md  MCP.md  MERGE.md  OUTPUTS.md  PIPELINE.md  QC_AND_REPORT.md  REAGENTS.md  ROADMAP.md  SAMPLING.md  SCORING.md  TIMESERIES.md  VANKREVELEN.md
mascope_assign/: __init__.py  analyte_viz.py  assign.py  assign_batch.py  chemistry.py  cleanup.py  cli.py  cluster.py  contexts.py  gka_figure.py  io_mascope.py  isotopes.py  ledger.py  passes.py  pdf_report.py  pipeline.py  profiles.py  reagents.py  report.py  residual.py  series_detect.py  siloxane.py  tiers.py  timeseries.py
peaky/: __init__.py  __main__.py  analyte_viz.py  assign.py  assign_batch.py  chemistry.py  cleanup.py  cli.py  cluster.py  clustering.py  composition.py  contexts.py  degeneracy.py  gka_figure.py  gka_widget.py  io_mascope.py  isotopes.py  ladders.py  ledger.py  local_scoring.py  mcp_server.py  passes.py  paths.py  pdf_report.py  pipeline.py  plausibility.py  profiles.py  provenance.py  qc_figure.py  reagents.py  reflists.py  report.py  residual.py  sampling.py  series_detect.py  series_gka.py  siloxane.py  tiers.py  timeseries.py
peaky/assignment/: assign.py  certified_neutral.py  cleanup.py  degeneracy.py  labeled.py  ladders.py  ledger.py  passes.py  plausibility.py  reflists.py  residual.py  series_detect.py  series_gka.py  siloxane.py  tiers.py
peaky/assignment/passes/: __init__.py  config.py  core.py  directors.py  postprocess.py
peaky/batch/: assign_batch.py  cluster.py  clustering.py  composition.py  nmf.py  sampling.py  timeseries.py
peaky/chem/: chemistry.py  contexts.py  isotopes.py  profiles.py  reagents.py
peaky/data/peaklists/: README.md  contaminants_keller2008.json  monoterpene_hom_kang2024.json
peaky/io/: curate.py  io_mascope.py  local_scoring.py
peaky/reporting/: analyte_viz.py  gka_figure.py  gka_widget.py  pdf_report.py  provenance.py  qc_figure.py  report.py
scripts/: analyte_plots.py  analyte_widgets.py  certify_neutrals.py  check_flagships.py  diel_classes.py  diff_runs.py  eval_local_scoring.py  gka_widget.py  run_assignment.py  time_local_batch.py
tests/: test_analyte_viz.py  test_assign_batch.py  test_batch_parallel.py  test_certified_neutral.py  test_chemistry.py  test_cleanup.py  test_cli.py  test_cluster.py  test_clustering.py  test_composition.py  test_contexts.py  test_curate.py  test_degeneracy.py  test_determinism.py  test_diel_classes.py  test_gka_figure.py  test_io_mascope.py  test_io_waf.py  test_isotopes.py  test_labeled.py  test_ladders.py  test_ledger.py  test_local_scoring.py  test_mcp_server.py  test_mechanism_names.py  test_nmf.py  test_passes.py  test_paths.py  test_pdf_report.py  test_phantom_guards.py  test_pipeline.py  test_plausibility.py  test_pooled.py  test_profiles.py  test_provenance.py  test_qc_figure.py  test_reagents.py  test_rearbitrate.py  test_reflists.py  test_report.py  (+9 more)
tests/fixtures/: match_tree.json
