[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peaky"
version = "0.4.0"
description = "Peaky — AI-native analysis toolbox for Mascope: reproducible CIMS peak assignment, clustering, and reporting."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aleksei Scherbinin" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["peaky", "mass-spectrometry", "CIMS", "peak-assignment", "van-krevelen", "mascope", "kendrick"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]

# Runtime dependencies. mascope-sdk is the live Mascope/Karsa connector (public
# PyPI, MIT); `pip install` pulls/updates it like any other dep. It is imported
# lazily inside io_mascope.connect(), so the offline test suite still makes NO
# network calls even though the SDK is installed. A Mascope ACCOUNT/token is only
# needed at run time — not to install or to run the offline tests.
dependencies = [
    "mascope-sdk>=2026.5",
    "pandas>=2.1",
    "pyarrow>=14",          # parquet engine — the per-batch TS (*_ts.parquet) is read/written across the pipeline
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# `pip install peaky[compress]` enables the size-reduced companion PDF
# (pdf_report.compress_pdf). Absent these, the report still builds; only the
# `_compressed.pdf` is skipped.
compress = ["PyMuPDF>=1.23", "Pillow>=9.0"]

[project.urls]
Repository = "https://github.com/karsa-oy/peaky"

[project.scripts]
peaky = "peaky.cli:main"
mascope-assign = "peaky.cli:main"   # back-compat alias

[tool.hatch.build.targets.wheel]
# `peaky` is the package; `mascope_assign` is a one-line back-compat shim
# (sys.modules alias) so existing `import mascope_assign` keeps working.
packages = ["peaky", "mascope_assign"]
